// Copyright 2020 The Swarm Authors. All rights reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

syntax = "proto3";

package retieval;

option go_package = "pb";

message Request {
    bytes Addr = 1;
}

message Delivery {
    bytes Data = 1;
}

message RequestChunk{
    bytes TargetAddr = 1;
    bytes RootAddr = 2;
    bytes ChunkAddr = 3;
}